# Omniproctor

./: .gitignore  main.py
Browser/: main.py  pyproject.toml
Browser/browser/: main.py
Browser/browser/network/: simplewall_controller.py
Dashboard/Backend/: index.js
Dashboard/Backend/prisma/: schema.prisma
Dashboard/Backend/src/routes/: testRoutes.js
Dashboard/Frontend/: components.json  jsconfig.json  package-lock.json  package.json
Dashboard/Frontend/src/: App.jsx  index.css
Dashboard/Frontend/src/components/: DashboardNavbar.jsx  FeatureCard.jsx  Features.jsx  Hero.jsx  HowItWorks.jsx  TestCard.jsx
Dashboard/Frontend/src/components/ui/: background-ripple-effect.jsx  floating-navbar.jsx  noise-background.jsx
Dashboard/Frontend/src/pages/: ActiveTest.jsx  CreateTest.jsx  Dashboard.jsx  Home.jsx  Login.jsx  Signup.jsx  SuspiciousActivities.jsx  ViewTest.jsx
browser/: keyblocks.py  main.py
browser/network/: simplewall_controller.py
